<resources>
    <string name="app_name">TaskanatorApp</string>
    <string name="title_addActiveTask">Add to Active Tasks</string>
    <string name="dog">Walk the Dog</string>
    <string name="plants">Water the Plants</string>
    <string name="movie">Watch a Movie</string>
    <string name="button_addTask">Add to My Tasks!</string>
    <string name="button_manageTask">Manage My Tasks!</string>
    <string name="button_generateRandomTask">Generate Random Task!</string>
    <string name="title_generateRandomTask">Generate Random Task</string>
    <string name="title_yourRandomTask">Your Random Task</string>
    <string name="info_I_need_to_fill">I need to fill:</string>
    <string name="info_category">Category</string>
    <string name="title_active_tasks">Active Tasks</string>
    <string name="info_mins">mins</string>
    <string name="hint_minutes">20</string>
    <string name="hint_enter_details">Enter details</string>
    <string name="hint_enter_duration">Enter duration (minutes, max 99)</string>
    <string name="hint_enter_task_name">Enter Name</string>
    <!--Categories array for random generator page-->
    <array name="categories">
        <item>All</item>
        <item>Leisure</item>
        <item>Sport</item>
        <item>Studying</item>
        <item>Chores</item>
        <item>Other</item>
    </array>
    <string name="button_go">Go!</string>
    <string name="info_task_name">Read a Book</string>
    <string name="info_task_details">Read Harry Potter and the Philosophers Stone.</string>
    <string name="button_accept_task">Accept Task</string>
    <string name="button_pick_again">No Thanks, Pick Again</string>
    <string name="button_back_to_active_tasks">Back To Active Tasks</string>
    <string name="title_add_task">Add New Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="title_edit_progress_bar">Edit Progress Bar</string>
    <string name="task_name">Task Name</string>
    <string name="task_details">Task Details</string>

    <!--Manage Tasks Activity Strings-->
    <string name="back_to_active_tasks">Back to Active Tasks</string>
    <string name="add_new_task">+</string>
    <string name="manage_my_tasks">Manage My Tasks</string>
    <string name="info_duration">Duration</string>

    <!--Task Details Strings-->
    <string name="task_details_default_task">Default Task</string>
    <string name="task_details_header">Task Details:</string>
    <string name="task_details_default_details">Default Task Details</string>
    <string name="task_details_task_complete">Mark Task Complete!</string>
    <string name="task_details_duration">Expected Duration:</string>
    <string name="task_details_category">Category:</string>
    <string name="button_task_details_remove_task">Remove From Active Tasks</string>

    <!--Task Card Strings-->
    <string name="task_card_task_name">Default Task Name</string>
    <string name="task_card_category_type">Category Task Type</string>
    <string name="task_card_task_description">Default Task Description</string>
    <string name="task_card_picture_desc">Default Picture Description</string>
    <string name="categories">\@string/categories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Add/Edit to Task Strings-->
    <string name="add_edit_tasks_task_name">Task Name</string>
    <string name="add_edit_tasks_task_name_error">Task Name - <font color="red">A task with this name already exists!</font></string>
    <string name="add_edit_tasks_task_category">Task Category</string>
    <string name="add_edit_tasks_task_category_error">Task Name - <font color="red">You must set a category for the task!</font></string>
    <string name="add_edit_tasks_task_description">Task Description</string>
    <string name="add_edit_tasks_task_duration">Task Duration</string>
    <string name="edit_tasks_save_edits">Save Edits</string>
    <string name="edit_tasks_delete_task">Delete Task</string>
    <string name="add_tasks_add_new_task">Add New Task</string>
    <string name="add_tasks_add_straight_to_active">Add Task to Active Tasks</string>
    <string name="add_edit_tasks_task_name_empty_error">Task Name - <font color="red">You must input a name for the task!</font></string>
    <string name="add_edit_tasks_task_description_empty_error">Task Description - <font color="red">You must input a description for the task!</font></string>
    <string name="add_edit_tasks_task_duration_empty_error">Task Duration - <font color="red">You must input a duration for the task!</font></string>
    <string name="add_edit_tasks_task_error_null">Task Name - <font color="red">You must input something for all fields!</font></string>

    <array name="add_categories">
        <item>Select Category</item>
        <item>Leisure</item>
        <item>Sport</item>
        <item>Studying</item>
        <item>Chores</item>
        <item>Other</item>
    </array>

    <!-- Completed Tasks Strings -->
    <string name="completed_task_title">Completed Tasks</string>
    <string name="button_Clear_Completed_Tasks">Clear Completed Task List</string>
    <string name="button_back_to_main_CT">Back to Active Tasks</string>
    <string name="duration_title_CTD">Duration:</string>

    <!-- Edit Progress Bar Strings -->
    <string name="title_set_new_progress_goal">Set New Progress Goal:</string>
    <string name="hint_edit_progress_bar_time">Enter Time (minutes)</string>

    <string name="progress_bar_setting_icon_info">Progress
        Bar
        <b><font color="white">Settings</font></b></string>

</resources>