<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_bg_gradient">

    <ImageButton
        android:id="@+id/infoButtonGRTbar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="showPopupView"
        android:tint="#49ACFB"
        app:layout_constraintEnd_toEndOf="@+id/editTaskDuration"
        app:layout_constraintTop_toBottomOf="@+id/editTaskDuration"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/editTaskHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_edit_task"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editTaskNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/add_edit_tasks_task_name"
        app:layout_constraintBottom_toTopOf="@+id/editTaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaskHeader" />

    <EditText
        android:id="@+id/editTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_enter_task_name"
        android:inputType="textPersonName"
        android:maxLength="20"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/editTaskNameCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskNameTitle" />

    <TextView
        android:id="@+id/editTaskNameCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_tasks_task_category"
        app:layout_constraintBottom_toTopOf="@+id/editTaskCategory"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskName" />

    <Spinner
        android:id="@+id/editTaskCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:entries="@array/add_categories"
        app:layout_constraintBottom_toTopOf="@+id/editTaskDescriptionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskNameCategory" />

    <TextView
        android:id="@+id/editTaskDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_tasks_task_description"
        app:layout_constraintBottom_toTopOf="@+id/editTaskDescription"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskCategory" />

    <EditText
        android:id="@+id/editTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_enter_details"
        android:inputType="textPersonName"
        android:maxLength="72"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/editTaskDurationTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskDescriptionTitle" />

    <TextView
        android:id="@+id/editTaskDurationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_tasks_task_duration"
        app:layout_constraintBottom_toTopOf="@+id/editTaskDuration"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskDescription" />

    <EditText
        android:id="@+id/editTaskDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/hint_enter_duration"
        android:inputType="number"
        android:maxLength="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTaskDurationTitle" />

    <Button
        android:id="@+id/buttonSaveEditTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_tasks_save_edits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaskDuration" />

    <Button
        android:id="@+id/buttonDeleteTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/edit_tasks_delete_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toEndOf="@+id/buttonSaveEditTask"
        app:layout_constraintTop_toBottomOf="@+id/editTaskDuration" />

    <include
        layout="@layout/popup"
        android:visibility="invisible"></include>

</androidx.constraintlayout.widget.ConstraintLayout>