<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_bg_gradient">

    <TextView
        android:id="@+id/editTaskHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_add_task"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addTaskNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/add_edit_tasks_task_name"
        app:layout_constraintBottom_toTopOf="@+id/addNewTaskName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTaskHeader" />

    <EditText
        android:id="@+id/addNewTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/addTaskNameCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/addTaskNameTitle" />

    <TextView
        android:id="@+id/addTaskNameCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_tasks_task_category"
        app:layout_constraintBottom_toTopOf="@+id/addTaskCategory"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/addNewTaskName" />

    <Spinner
        android:id="@+id/addTaskCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/add_categories"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/addTaskNameCategory" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_tasks_task_description"
        app:layout_constraintBottom_toTopOf="@+id/addNewTaskDescription"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/addTaskCategory" />

    <EditText
        android:id="@+id/addNewTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_edit_tasks_task_duration"
        app:layout_constraintBottom_toTopOf="@+id/addNewTaskDuration"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/addNewTaskDescription" />

    <EditText
        android:id="@+id/addNewTaskDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/AddTaskAddToActiveTasksSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Switch
        android:id="@+id/AddTaskAddToActiveTasksSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_tasks_add_straight_to_active"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddTask"
        app:layout_constraintStart_toStartOf="@+id/addTaskNameTitle"
        app:layout_constraintTop_toBottomOf="@+id/addNewTaskDuration" />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_tasks_add_new_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskAddToActiveTasksSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>