<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grey_bg_gradient"
    tools:context=".TaskDetails">

    <ImageButton
        android:id="@+id/infoButtonGRTbar9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:onClick="showPopupView"
        android:tint="#49ACFB"
        app:layout_constraintBottom_toTopOf="@+id/buttonRemoveTaskTD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonRemoveTaskTD"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailsCompleteTask"
        app:srcCompat="@android:drawable/ic_dialog_info" />

    <TextView
        android:id="@+id/TaskDetailsTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/task_details_default_task"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TaskDetailsHeader"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/task_details_header"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailsTaskName" />

    <TextView
        android:id="@+id/TaskDetailsTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        android:background="#FFFFFF"
        android:text="@string/task_details_default_details"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTaskDurationTitleTD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailsHeader" />

    <Button
        android:id="@+id/TaskDetailsCompleteTask"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/task_details_task_complete"
        app:layout_constraintEnd_toEndOf="@+id/textViewTaskCategoryTD"
        app:layout_constraintStart_toStartOf="@+id/textViewTaskCategoryTD"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskCategoryTD" />

    <TextView
        android:id="@+id/textViewTaskDurationTD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#FFFFFF"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTD"
        app:layout_constraintEnd_toEndOf="@+id/TaskDetailsTaskDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TaskDetailsTaskDescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskDurationTitleTD"
        app:layout_constraintVertical_bias="0.382" />

    <Button
        android:id="@+id/buttonRemoveTaskTD"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_task_details_remove_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/TaskDetailsCompleteTask"
        app:layout_constraintStart_toStartOf="@+id/TaskDetailsCompleteTask"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailsCompleteTask"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewTaskCategoryTD"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTD" />

    <ImageView
        android:id="@+id/imageViewTD"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTaskCategoryTD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskDurationTD"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/textViewTaskDurationTitleTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_details_duration"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/TaskDetailsTaskDescription"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailsTaskDescription" />

    <TextView
        android:id="@+id/textViewTaskCategoryTitleTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_details_category"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewTD"
        app:layout_constraintStart_toStartOf="@+id/textViewTaskDurationTD"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskDurationTD"
        app:layout_constraintVertical_bias="0.119" />

    <include
        layout="@layout/popup"
        android:visibility="invisible"></include>

</androidx.constraintlayout.widget.ConstraintLayout>